fix: changed overflow y in offers list

--- a/src/components/OffersContainer/OffersList/OffersList.module.scss
+++ b/src/components/OffersContainer/OffersList/OffersList.module.scss
@@ -12,7 +12,7 @@
    position: absolute;
    top: 15%;
    height: 80%;
-   overflow-y: scroll;
+   overflow-y: auto;
    margin-top: 16px;
    list-style: none;
    background: var(--gray-lightest, #f8f8f8);
